--- a/Helloworld/templates/books.html
+++ b/Helloworld/templates/books.html
@@ -3,8 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        tr, td, th {
+            border: 1px solid black;
+        }
+
+        table {
+            border-collapse: collapse;
+        }
+    </style>
 </head>
 <body>
 <h1>Hello World!</h1>
+
+
+<table>
+    <tr>
+        <th>ISBN</th>
+        <th>Title</th>
+        <th>Content</th>
+    </tr>
+    {% for book in books %}
+    <tr>
+        <th>{{ book.isbn }}</th>
+        <th>{{ book.title }}</th>
+        <th>{{ book.content }}</th>
+    </tr>
+    {% endfor %}
+</table>
+
+
+<ul>
+    {% for book in books %}
+    <li>{{ book.title }}</li>
+    {% endfor %}
+</ul>
+
+{{Date}}
+
+<div>
+    {{form.as_p}}
+</div>
+
 </body>
 </html>
